--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Public Sans', sans-serif;
+    font-size: 1.1rem;
 	background-color:#F5F5F5;
 }
 
@@ -30,7 +31,7 @@ body {
 
 /* hero start */
 .hero {
-	padding:120px 0;
+	padding:70px 0;
 	background-image:url(images/herobg.svg);
 	background-position:center;
 	background-size:cover;
